fixed white footer  not  visible

--- a/src/app/styles/nibbles.css
+++ b/src/app/styles/nibbles.css
@@ -71,6 +71,7 @@ html{
     width: 100%;
     color: white;
     padding: 15px;
+    text-shadow: 0px 0px 5px rgba(0, 0, 0, 0.7);
 }
 
 /* Video Footer */
@@ -86,10 +87,11 @@ html{
     position : absolute;
     bottom : 0;
     color: white;
+    text-shadow: 0px 0px 5px rgba(0, 0, 0, 0.7);
     display: flex;
     align-items: center;
     justify-content: center;
-    margin-bottom: 40px;
+    margin-bottom: 55px;
     flex-direction: column;
 }
 
@@ -104,12 +106,12 @@ html{
     flex-direction: column;
     align-items: center;
     position: absolute;
+    text-shadow: 0px 0px 5px rgba(0, 0, 0, 0.7);
+    font-weight: 700;
     right: 0px;
     bottom: 120px; /* Adjusted positioning */
 }
 
-
- /* Action like */
  .nibble-action-button {
     position: relative;
     background-color: transparent !important;
@@ -117,6 +119,7 @@ html{
     cursor: pointer;
     box-shadow: none;
     outline: none;
+    text-shadow: 0px 0px 5px rgba(0, 0, 0, 0.7);
 }
 
 .nibble-action-button-like {
